# uj-algorythms-and-data-structures

./: .gitignore  README.md
Semestr01/: README.md  ZALICZENIE.md
Semestr01/Zestaw01/: Makefile  Stack.cpp
Semestr01/Zestaw02/: ArrayQueue.hpp  LinkedQueue.hpp  NOTES.md  Radix.cpp
Semestr01/Zestaw03/: LinkedList.cpp  Makefile  NOTES.md  README.md
Semestr01/Zestaw04/: ArrayList.cpp  CursorList.cpp  Generator.cpp  Makefile  README.md
Semestr01/Zestaw05/: chart.py  test.py
Semestr01/Zestaw07/: .gitignore  slowa32.txt  slowa335.txt
Semestr02/: .editorconfig
Semestr02/Zestaw01/: BinaryHeap.hpp  Makefile  Test.cpp
Semestr02/Zestaw02/: Makefile  Set.hpp  Test.cpp
Semestr02/Zestaw03/: Set.hpp  Test.cpp  lib.hpp
Semestr02/Zestaw04/: Graph.hpp  Test.cpp
Zestaw01/: ArrayStack.hpp  Generator.cpp  LinkedStack.hpp  NOTES.md  ONP.cpp  README.md  Stack.cpp
Zestaw02/: ArrayQueue.hpp  LinkedQueue.hpp  Makefile  Queue.cpp  Radix.cpp
Zestaw03/: AbstractList.hpp  LinkedList.hpp  List.cpp  Makefile  NOTES.md
Zestaw04/: ArrayList.cpp  ArrayList.hpp  CursorList.cpp  CursorList.hpp  Makefile  iterator.hpp
Zestaw05/: Generator.cpp  Makefile  SelectionSort.cpp  test.bash
Zestaw06/: BinaryTree.cpp  BinaryTree.hpp  Makefile  diff.txt
Zestaw07/: Dict.cpp  Dict.hpp  Makefile  eng.txt  index.js  odm.txt  pl.txt  slowa.txt
zestaw-01/: ArrayStack.hpp  Generator.cpp  LinkedStack.hpp  Makefile  ONP.cpp  README.md  Stack.cpp  mathExpr.test  testExpected  testIn
zestaw-02/: README.md
zestaw-1/: CMakeLists.txt  README.md
zestaw-1/src/: ArrayStack.hpp  Stack.cpp
(+12 files in other folders)
